...
    <!-- Saved pages -->
    <string name="dialog_title_clear_history">Clear browsing history</string>
    <string name="dialog_message_clear_history">This will delete all of your browsing history, and close any currently open tabs. Are you sure?</string>
    <string name="dialog_message_clear_history_yes">Yes</string>
    <string name="dialog_message_clear_history_no">No</string>
    <string name="nav_item_saved_pages">Saved pages</string>
    <string name="share_via">Share via</string>
    <string name="search_redirect_from">Redirected from %s</string>

    <!-- Page toolbar menu -->
    <string name="menu_page_show_tabs">Show tabs</string>
    <string name="menu_page_other_languages">Change language</string>
    <string name="menu_page_find_in_page">Find in page</string>
...
    <string name="preference_title_enable_offline_library">Enable Offline Library</string>
    <string name="preference_summary_enable_offline_library"><![CDATA[Access Wikipedia article packs (shown as .ZIM files) that have been downloaded to your device for reading when you\'re offline. <a href="https://www.mediawiki.org/wiki/Wikimedia_Apps/Offline_support">Find out more</a>]]></string>

    <!-- Crash reporter -->
    <string name="crash_report_dialog_title">Sorry, app crashed last time</string>
    <string name="crash_report_dialog_text">Would you like to send a crash report to HockeyApp / a third-party service provider so that Wikimedia can review your crash and fix the bug that caused it?</string>
    <string name="crash_report_dialog_dont_send_button">Skip</string>
    <string name="crash_report_dialog_always_send_button">Always send</string>
    <string name="crash_report_dialog_send_button">Send</string>
    <string name="crash_report_activity_title">Application error</string>
    <string name="crash_report_relaunch_or_quit">We\'re sorry, the Wikipedia app has experienced an error and was terminated.\n\nWould you like to start over or quit?</string>
    <string name="crash_report_relaunch">Start over</string>
    <string name="crash_report_quit">Quit</string>
...
    <string name="view_main_page_card_subtitle">Main page on %s</string>
    <string name="view_main_page_card_action">View main page</string>
    <string name="view_featured_image_card_title">Picture of the day</string>
    <string name="view_featured_image_card_download">Download</string>
    <string name="menu_feed_card_dismiss">Hide this card</string>
    <string name="menu_feed_card_dismissed">Card hidden.</string>
    <string name="menu_feed_overflow_label">More options</string>

    <string name="feed_featured_image_share_subject">Featured image from Wikimedia Commons</string>
    <string name="feed">Explore</string>
    <string name="view_card_footer_button">See more</string>
    <string name="most_read_list_card_title">Trending</string>
    <string name="view_static_card_icon_content_description">Card icon</string>
...
