...
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="-18dp"
        android:background="?attr/material_theme_border_color" />

    <LinearLayout
        android:id="@+id/more_events_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="-18dp"
        android:background="?attr/paper_color"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
...
            android:textColor="?attr/secondary_text_color" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
                <ImageView
                android:id="@+id/view_card_on_this_day_footer_share_button"
                android:layout_width="56dp"
                android:layout_height="48dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
...
